# physicsengine2d-sandbox

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CORE_DEV_GUIDE.md  Makefile  QUICKSTART.md  README.md  autosave_snapshot.txt  sandbox_ui.ini
.github/workflows/: regression.yml
Build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
Prefabs/: phase_g_base.prefab  phase_g_nested.prefab  sample_prefab_v1.prefab
ProjectSettings/: editor.physicssettings  editor_session.physicssession  project.physicsproject  workspace.physicsworkspace
Scenes/: sample_scene_v1.scene
apps/runtime_cli/: main.cpp
apps/sandbox_dwrite/: app_icon.rc  main.c  main.cpp
build_recompile_check/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp/: physics2d.hpp  physics_body_raii.hpp  physics_ecs.hpp  physics_raii.hpp  physics_runtime_app_bridge.hpp  physics_runtime_config.hpp  physics_runtime_facade.hpp  physics_script_bridge.hpp  physics_snapshot.hpp  physics_status.hpp  physics_world_raii.hpp
docs/: API_CN.md  API_COMPATIBILITY.md  API_EN.md  ARCH_OPTIMIZE_TODO.md  ARCH_TODO.md  ASSET_HOT_RELOAD_V1.md  ASSET_IMPORTER_V1.md  CPP_KERNEL_PHASE_A_BENCHMARK.md  CPP_KERNEL_PHASE_A_PROGRESS.md  CPP_KERNEL_PHASE_A_SUMMARY.md  CPP_KERNEL_REFACTOR_DETAILED_DESIGN.md  CPP_MIGRATION_TODO.md  ENGINE_ARCHITECTURE.md  KERNEL_NEXT_TODO.md  PHASE_C_ACCEPTANCE.md  PHASE_C_COMMIT_PLAN.md  PHASE_C_DETAILED_DESIGN.md  PHASE_C_EVIDENCE.md  PHASE_C_FINAL_REPORT.md  PHASE_C_PROGRESS.md  PHASE_D_ACCEPTANCE.md  PHASE_D_DETAILED_DESIGN.md  PHASE_D_EVIDENCE.md  PHASE_D_FINAL_REPORT.md  PHASE_D_PROFILE_REPORT.md  PHASE_D_PROGRESS.md  PHASE_E_ACCEPTANCE.md  PHASE_E_C_RETENTION_PLAN.md  PHASE_E_DETAILED_DESIGN.md  PHASE_E_DIRECTORY_MAPPING.md  PHASE_E_EVIDENCE.md  PHASE_E_FINAL_REPORT.md  PHASE_E_PROGRESS.md  PHASE_F_ACCEPTANCE.md  PHASE_F_DETAILED_DESIGN.md  PHASE_F_EVIDENCE.md  PHASE_F_FINAL_REPORT.md  PHASE_F_PROGRESS.md  PHASE_G_ACCEPTANCE.md  PHASE_G_DETAILED_DESIGN.md  (+17 more)
docs/api/: API_CN.md  API_COMPATIBILITY.md  ASSET_HOT_RELOAD_V1.md  ASSET_META_V1.md  ASSET_PIPELINE_V1.md
docs/architecture/: CPP_KERNEL_REFACTOR_DETAILED_DESIGN.md  CPP_KERNEL_SWITCH_POLICY.md  ENGINE_ARCHITECTURE.md  FRONTEND_REFACTOR_PLAN_CN.md  MAIN_CPP_SPLIT_PLAN.md  PHYSICS_CORE_BOUNDARY.md  PROJECT_RESTRUCTURE_PLAN.md  PROJECT_RESTRUCTURE_PLAN_CN.md  PROJECT_STRUCTURE.md  RUNTIME_ERROR_SEMANTICS.md  WORLD_EDITOR_ROADMAP.md  WORLD_EDITOR_ROADMAP_CN.md
docs/archive/: ARCH_SIMPLIFY_TODO.md  ARCH_TODO.md  KERNEL_NEXT_TODO.md
docs/phases/: CPP_KERNEL_PHASE_A_PROGRESS.md  PHASE_C_ACCEPTANCE.md  PHASE_C_COMMIT_PLAN.md  PHASE_C_DETAILED_DESIGN.md  PHASE_C_PROGRESS.md  PHASE_D_ACCEPTANCE.md  PHASE_D_DETAILED_DESIGN.md  PHASE_D_PROGRESS.md  PHASE_E_C_RETENTION_PLAN.md  PHASE_E_DETAILED_DESIGN.md  PHASE_E_DIRECTORY_MAPPING.md  PHASE_F_ACCEPTANCE.md  (+9 more)
examples/: standalone_core_example.cpp
include/: asset_database.h  asset_database.hpp  asset_fs_poll.h  asset_fs_poll.hpp  asset_fs_watch.h  asset_fs_watch.hpp  asset_hot_reload.h  asset_hot_reload.hpp  asset_importer.h  asset_importer.hpp  asset_invalidation.h  asset_invalidation.hpp  asset_pipeline.h  asset_pipeline.hpp  asset_watch.h  body.h  body.hpp  collision.h  collision.hpp  constraint.h  constraint.hpp  diagnostic_bundle.hpp  editor_plugin.hpp  physics.h  physics.hpp  physics_ext.h  physics_ext.hpp  physics_math.h  physics_world.h  physics_world.hpp  prefab_schema.hpp  prefab_semantics.hpp  project_workspace.hpp  runtime_snapshot_repo.hpp  scene_schema.hpp  session_recovery.hpp  shape.h  shape.hpp  subsystem_render_audio_animation.h  subsystem_render_audio_animation.hpp
installer/: physics_sandbox.iss
scripts/: check_api_surface.ps1  check_arch_deps.ps1  check_core_change.ps1  check_cpp_convergence.ps1  emit_build_metadata.ps1  hot_reload_smoke.ps1  hot_reload_smoke_headless.ps1  package.ps1  package_physics_core.ps1  run_phase_c_gate_suite.ps1  run_phase_d_gate_suite.ps1  run_phase_e_gate_suite.ps1  run_phase_g_gate_suite.ps1  run_phase_h_gate_suite.ps1  run_phase_h_release_matrix.ps1
src/: body.c  collision.c  constraint.c  math.c  physics.c  physics_broadphase.c  physics_ccd.c  physics_ccd.cpp  physics_collision_pipeline.c  physics_collision_pipeline.cpp  physics_config.c  physics_config.cpp  physics_contact_manager.c  physics_contact_manager.cpp  physics_ids.c  physics_integrate.c  physics_internal.h  physics_internal.hpp  physics_lifecycle.c  physics_memory.c  physics_memory.cpp  physics_parallel.c  physics_pipeline_api.c  physics_query.c  physics_raycast.c  physics_resolve.c  physics_resolve.cpp  physics_snapshot.c  physics_solver.c  physics_solver.cpp  physics_step.c  physics_step.cpp  physics_world.c
tests/: REGRESSION_TEST_TEMPLATE.md  app_runtime_tick_smoke.c  benchmark_suite.c  benchmark_suite.cpp  content_regression_runner.cpp  cpp_api_smoke.cpp  cpp_body_raii_smoke.cpp  cpp_constraint_raii_smoke.cpp  cpp_ecs_bridge_smoke.cpp  cpp_ecs_dirty_sync_smoke.cpp  cpp_ecs_pipeline_config_smoke.cpp  cpp_ecs_pipeline_smoke.cpp  cpp_ecs_query_smoke.cpp  cpp_ecs_smoke.cpp  cpp_engine_view_smoke.cpp  cpp_foundation_smoke.cpp  cpp_raii_smoke.cpp  cpp_runtime_app_bridge_smoke.cpp  cpp_runtime_error_channel_smoke.cpp  cpp_runtime_error_recovery_smoke.cpp  cpp_runtime_events_smoke.cpp  cpp_runtime_facade_smoke.cpp  cpp_runtime_multi_error_smoke.cpp  cpp_runtime_pause_step_smoke.cpp  cpp_script_bridge_smoke.cpp  cpp_single_include_smoke.cpp  cpp_snapshot_smoke.cpp  cpp_status_smoke.cpp  cpp_world_raii_smoke.cpp  editor_extension_state_service_smoke.cpp  editor_pie_lifecycle_smoke.c  editor_undo_redo_smoke.c  invariant_tests.c  invariant_tests.cpp  kernel_regression_runner.cpp  physics_core_header_smoke.cpp  regression_asset_database_tests.c  regression_asset_database_tests.cpp  regression_asset_hot_reload_tests.c  regression_asset_hot_reload_tests.cpp  (+30 more)
tools/: parallel_benchmark_compare.c  parallel_benchmark_compare.cpp  phase_d_profile_capture.c  phase_d_profile_capture.cpp  scene_migrate_main.c  scene_migrate_main.cpp  subsystem_workflow_demo.c  subsystem_workflow_demo.cpp
(+323 files in other folders)
